--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello, world!</h1>
     <hr>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum facilis laborum nulla atque debitis omnis non eveniet aspernatur sit deleniti quas excepturi distinctio aliquid neque qui velit, eligendi at officia.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum facilis laborum nulla atque debitis omnis non eveniet aspernatur sit deleniti quas excepturi distinctio aliquid neque qui velit, eligendi at officia.</p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta earum, sapiente alias quasi fugit dolore officiis temporibus rem! Ad consectetur iste aliquid voluptatum debitis alias asperiores officia, corporis at odit.
 </body>
 </html>
